plugins {
    id 'java'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.16'
    id "xyz.jpenilla.run-paper" version "2.3.1"
}

group = 'net.anatomyworld'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }
    flatDir {
        dirs 'libs'
    }
}

sourceSets {
    main {
        resources {
            srcDir 'src/main/resources'
        }
    }
}


dependencies {

    paperweight.paperDevBundle("1.21.3-R0.1-SNAPSHOT")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset = 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

jar {
    archiveBaseName.set("BiomeWorld")
}

// Add run server task
tasks.named("runServer") {
    minecraftVersion("1.21.3")
}
